--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.5.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aali05/MEANie.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/aali05/MEANie/issues"
+  },
+  "homepage": "https://github.com/aali05/MEANie#readme"
 }
